...
          const SizedBox(height: 16),
          
          // Campo de senha
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 24),
            child: MetamorfesePasswordInput(
              hintText: 'Senha',
              controller: _passwordController,
              onVisibilityChanged: (isVisible) {
                     context.read<AuthBloc>().add(AuthToggleEyesEvent(!isVisible));
              },
              prefixIcon: Padding(
                padding: const EdgeInsets.all(12),
...
          const SizedBox(height: 32),
          
          // Botão Entrar
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 24),
            child: MetamorfeseButton(
                  text: state.loginState.isLoading ? 'ENTRANDO...' : 'ENTRAR',
                  onPressed: state.loginState.isLoading 
                      ? () {} 
                      : () {
                          context.read<AuthBloc>().add(AuthSubmitLoginEvent(
                            email: _emailController.text,
                            password: _passwordController.text,
...
              // Botão Criar Conta
              Padding(
                padding: const EdgeInsets.symmetric(horizontal: 24),
                child: MetamorfeseButton(
                  text: state.registerState.isLoading
                      ? 'CRIANDO CONTA...'
                      : 'CRIAR CONTA',
                  onPressed: state.registerState.isLoading
                      ? () {}
                      : () {
                          context.read<AuthBloc>().add(AuthSubmitRegisterEvent(
                                email: _emailController.text,
                                password: _passwordController.text,
...
