...
              shrinkWrap: true,
              padding: EdgeInsets.symmetric(
                horizontal: widget.useCompactLayout ? 32 : 24,
              ),
              children: [
                InputField(
                  hintText: 'Nome completo',
                  controller: _nameController,
                  errorText: _nameError,
                  prefixIcon: const Icon(
                    Icons.person_outline,
                    size: 20,
                    color: MetamorfoseColors.purpleLight,
...
